// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract for a provided glob resolves with the snippets for each files & skips empty ones 1`] = `
Array [
  Object {
    "file": "snippets-2.md",
    "lang": "all",
    "snippets": Array [
      Object {
        "lang": "js",
        "meta": "",
        "position": Object {
          "start": Object {
            "column": 1,
            "line": 3,
          },
        },
        "value": "console.log(\\"Hello, World!\\")",
      },
    ],
  },
  Object {
    "file": "snippets.md",
    "lang": "all",
    "snippets": Array [
      Object {
        "lang": "js",
        "meta": "(meta) (tags)",
        "position": Object {
          "start": Object {
            "column": 1,
            "line": 3,
          },
        },
        "value": "console.log(\\"Hello, World!\\")",
      },
      Object {
        "lang": "javascript",
        "meta": "",
        "position": Object {
          "start": Object {
            "column": 1,
            "line": 7,
          },
        },
        "value": "console.log(\\"Hello, World!\\")",
      },
      Object {
        "lang": "JavaScript",
        "meta": "",
        "position": Object {
          "start": Object {
            "column": 1,
            "line": 12,
          },
        },
        "value": "console.log(\\"Hello, World!\\")",
      },
      Object {
        "lang": "go",
        "meta": "",
        "position": Object {
          "start": Object {
            "column": 1,
            "line": 18,
          },
        },
        "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
      },
      Object {
        "lang": "golang",
        "meta": "",
        "position": Object {
          "start": Object {
            "column": 1,
            "line": 28,
          },
        },
        "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
      },
      Object {
        "lang": "bash",
        "meta": "",
        "position": Object {
          "start": Object {
            "column": 1,
            "line": 40,
          },
        },
        "value": "$ echo 'Hello, World!'",
      },
    ],
  },
]
`;

exports[`extractSingle when a language is provided extracts the corresponding snippets from a file 1`] = `
Object {
  "file": "snippets.md",
  "lang": Array [
    "js",
    "javascript",
  ],
  "snippets": Array [
    Object {
      "lang": "js",
      "meta": "(meta) (tags)",
      "position": Object {
        "start": Object {
          "column": 1,
          "line": 3,
        },
      },
      "value": "console.log(\\"Hello, World!\\")",
    },
    Object {
      "lang": "javascript",
      "meta": "",
      "position": Object {
        "start": Object {
          "column": 1,
          "line": 7,
        },
      },
      "value": "console.log(\\"Hello, World!\\")",
    },
  ],
}
`;

exports[`extractSingle when a language is provided extracts the corresponding snippets from a file 2`] = `
Object {
  "file": "snippets.md",
  "lang": "bash",
  "snippets": Array [
    Object {
      "lang": "bash",
      "meta": "",
      "position": Object {
        "start": Object {
          "column": 1,
          "line": 40,
        },
      },
      "value": "$ echo 'Hello, World!'",
    },
  ],
}
`;

exports[`extractSingle when a language is provided extracts the corresponding snippets from a file 3`] = `
Object {
  "file": "snippets.md",
  "lang": "go",
  "snippets": Array [
    Object {
      "lang": "go",
      "meta": "",
      "position": Object {
        "start": Object {
          "column": 1,
          "line": 18,
        },
      },
      "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
    },
    Object {
      "lang": "go",
      "meta": "lang",
      "position": Object {
        "start": Object {
          "column": 1,
          "line": 28,
        },
      },
      "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
    },
  ],
}
`;

exports[`extractSingle when no second argument is passed extracts ALL the snippets from a file 1`] = `
Object {
  "file": "snippets.md",
  "lang": "all",
  "snippets": Array [
    Object {
      "lang": "js",
      "meta": "(meta) (tags)",
      "position": Object {
        "start": Object {
          "column": 1,
          "line": 3,
        },
      },
      "value": "console.log(\\"Hello, World!\\")",
    },
    Object {
      "lang": "javascript",
      "meta": "",
      "position": Object {
        "start": Object {
          "column": 1,
          "line": 7,
        },
      },
      "value": "console.log(\\"Hello, World!\\")",
    },
    Object {
      "lang": "JavaScript",
      "meta": "",
      "position": Object {
        "start": Object {
          "column": 1,
          "line": 12,
        },
      },
      "value": "console.log(\\"Hello, World!\\")",
    },
    Object {
      "lang": "go",
      "meta": "",
      "position": Object {
        "start": Object {
          "column": 1,
          "line": 18,
        },
      },
      "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
    },
    Object {
      "lang": "golang",
      "meta": "",
      "position": Object {
        "start": Object {
          "column": 1,
          "line": 28,
        },
      },
      "value": "package main

import \\"fmt\\"

func main() {
  fmt.Println(\\"Hello, World!\\")
}",
    },
    Object {
      "lang": "bash",
      "meta": "",
      "position": Object {
        "start": Object {
          "column": 1,
          "line": 40,
        },
      },
      "value": "$ echo 'Hello, World!'",
    },
  ],
}
`;
